[gd_scene load_steps=26 format=3 uid="uid://cxticg3cua2ee"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_vq41n"]
[ext_resource type="PackedScene" uid="uid://cojilju5y30nk" path="res://scenes/ball.tscn" id="2_po030"]
[ext_resource type="PackedScene" uid="uid://cn7vpyj2rwb47" path="res://scenes/box.tscn" id="3_1yqpa"]
[ext_resource type="Script" path="res://scripts/box.gd" id="4_orowm"]
[ext_resource type="PackedScene" uid="uid://c75cuu4w43p7p" path="res://scenes/goal.tscn" id="5_785bi"]
[ext_resource type="PackedScene" uid="uid://bp1hmrj05s3mg" path="res://scenes/button.tscn" id="6_2k74k"]
[ext_resource type="PackedScene" uid="uid://mmr52ytqbmhh" path="res://scenes/var_input.tscn" id="7_43jr3"]
[ext_resource type="Texture2D" uid="uid://bjckmcgbds4vy" path="res://png/Rect-Dark-Default/MediumArrow-Right.png" id="8_rrfhf"]
[ext_resource type="PackedScene" uid="uid://c6jqf5uaxd7dx" path="res://scenes/color_selector.tscn" id="9_eh668"]
[ext_resource type="AudioStream" uid="uid://bno2eewac22oe" path="res://assets/flip.wav" id="10_3tyy4"]
[ext_resource type="PackedScene" uid="uid://is4ww3g1lnph" path="res://scenes/message.tscn" id="11_kgd12"]
[ext_resource type="AudioStream" uid="uid://bioq7qoawv5o1" path="res://assets/physpong.wav" id="12_wjflt"]
[ext_resource type="Shader" path="res://scripts/shake.gdshader" id="13_8va0i"]
[ext_resource type="Texture2D" uid="uid://df8sg62rpfieg" path="res://icon.svg" id="14_kji5c"]
[ext_resource type="Shader" path="res://scripts/weaird.gdshader" id="15_kmet6"]

[sub_resource type="Animation" id="Animation_fnkqn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arena/box4/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.654902, 0, 0.788235, 0.294118)]
}

[sub_resource type="Animation" id="Animation_jotrw"]
resource_name = "shift_middle"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("arena/box4/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.294118), Color(0, 1, 0, 0.294118), Color(0, 0, 1, 0.294118), Color(1, 0, 0, 0.294118)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jwinx"]
_data = {
"RESET": SubResource("Animation_fnkqn"),
"shift_middle": SubResource("Animation_jotrw")
}

[sub_resource type="Animation" id="Animation_b47s1"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_stuff/RedScoreLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("game_stuff/BlueScoreLabel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("game_cam:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_442nr"]
resource_name = "camera_to_game"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_cam:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_8h83c"]
resource_name = "camera_to_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_cam:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0726v"]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_stuff/RedScoreLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("game_stuff/BlueScoreLabel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ch08o"]
_data = {
"RESET": SubResource("Animation_b47s1"),
"camera_to_game": SubResource("Animation_442nr"),
"camera_to_menu": SubResource("Animation_8h83c"),
"fade": SubResource("Animation_0726v")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j7yl8"]
shader = ExtResource("13_8va0i")
shader_parameter/ShakeStrength = 0.0
shader_parameter/FactorA = Vector2(100, 100)
shader_parameter/FactorB = Vector2(1, 1)
shader_parameter/magnitude = Vector2(0.01, 0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_adv75"]
shader = ExtResource("15_kmet6")
shader_parameter/r_displacement = Vector2(0, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(0, 0)

[node name="game" type="Node2D"]
script = ExtResource("1_vq41n")

[node name="game_cam" type="Camera2D" parent="."]
ignore_rotation = false
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true

[node name="game_stuff" type="Node2D" parent="."]
top_level = true
position = Vector2(-18, 0)

[node name="ball" parent="game_stuff" instance=ExtResource("2_po030")]
position = Vector2(-962, 4)
collision_layer = 2
collision_mask = 2

[node name="arena" type="Node2D" parent="game_stuff"]
position = Vector2(19, 20)

[node name="box" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(2159, 1006)
rotation = 1.5708
collision_layer = 3
collision_mask = 3

[node name="box6" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(-2870, -335)
rotation = -0.785398
collision_layer = 3
collision_mask = 3

[node name="box7" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(-454, -2080)
rotation = 0.785398
collision_layer = 3
collision_mask = 3

[node name="box8" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(2716, -181)
rotation = 0.785398
collision_layer = 3
collision_mask = 3

[node name="box9" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(822, -1713)
rotation = -0.785398
collision_layer = 3
collision_mask = 3

[node name="box5" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(2096, -1087)
rotation = 1.5708
collision_layer = 3
collision_mask = 3

[node name="box10" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(-1911, -1863)
collision_layer = 3
collision_mask = 3

[node name="box3" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
position = Vector2(1859, -1092)
collision_layer = 3
collision_mask = 3

[node name="box4" parent="game_stuff/arena" instance=ExtResource("3_1yqpa")]
modulate = Color(1, 0.498039, 1, 1)
position = Vector2(-19, -1654)
script = ExtResource("4_orowm")

[node name="ColorRect" parent="game_stuff/arena/box4" index="1"]
offset_left = -28.0
offset_right = 28.0
color = Color(0.654902, 0, 0.788235, 0.294118)

[node name="player1goal" parent="game_stuff" instance=ExtResource("5_785bi")]
position = Vector2(-1824, 20)
scale = Vector2(5, 20)
collision_layer = 7
collision_mask = 7

[node name="player1goal2" parent="game_stuff" instance=ExtResource("5_785bi")]
position = Vector2(1850, 20)
scale = Vector2(5, 20)
collision_layer = 7
collision_mask = 7
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = -200.0
player = 1

[node name="ColorRect" parent="game_stuff/player1goal2" index="1"]
color = Color(0, 0, 1, 0.392157)

[node name="BlueScoreLabel" type="Label" parent="game_stuff"]
self_modulate = Color(1, 1, 1, 0)
top_level = true
offset_left = 1062.0
offset_top = -282.0
offset_right = 2429.0
offset_bottom = 267.0
theme_override_font_sizes/font_size = 400
text = "0
"
metadata/_edit_lock_ = true

[node name="RedScoreLabel" type="Label" parent="game_stuff"]
self_modulate = Color(1, 1, 1, 0)
top_level = true
offset_left = -1290.0
offset_top = -286.0
offset_right = 94.0
offset_bottom = 263.0
theme_override_font_sizes/font_size = 400
text = "0
"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="game_stuff"]
libraries = {
"": SubResource("AnimationLibrary_jwinx")
}

[node name="Control" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
offset_left = -330.0
offset_top = 120.0
offset_right = 325.0
offset_bottom = 189.0
theme_override_font_sizes/font_size = 50
text = "Press A/Space to Join"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -67.0
offset_right = 30.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="GridContainer" parent="Control/AspectRatioContainer"]
layout_mode = 2
columns = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/AspectRatioContainer/VBoxContainer"]
layout_mode = 2

[node name="GravityLabel" type="Label" parent="Control/AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Gravity Type
"

[node name="gavity_type" type="OptionButton" parent="Control/AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Two and Two"
popup/item_0/id = 0
popup/item_1/text = "All"
popup/item_1/id = 1
popup/item_2/text = "No Flip Down"
popup/item_2/id = 2
popup/item_3/text = "No Flip Up"
popup/item_3/id = 3

[node name="Label" type="Label" parent="Control/AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Enable Boosts"

[node name="BoostsCheck" type="CheckBox" parent="Control/AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="Control/AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Soccer Mode"

[node name="soccer_mode" type="CheckBox" parent="Control/AspectRatioContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150

[node name="BoxContainer" type="BoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 105

[node name="start_button" parent="Control/VBoxContainer/BoxContainer" instance=ExtResource("6_2k74k")]
layout_mode = 2
text = "Start"

[node name="CollisionShape2D" parent="Control/VBoxContainer/BoxContainer/start_button/Area2D" index="0"]
position = Vector2(39.5, 24.5)

[node name="VictoryLabel" type="Label" parent="Control/VBoxContainer/BoxContainer"]
layout_mode = 2
text = "Victory Score
"

[node name="var_input" parent="Control/VBoxContainer/BoxContainer/VictoryLabel" instance=ExtResource("7_43jr3")]
layout_mode = 2
offset_left = 138.0
offset_right = 284.0
offset_bottom = 26.0

[node name="CollisionShape2D" parent="Control/VBoxContainer/BoxContainer/VictoryLabel/var_input/up_input" index="0"]
position = Vector2(9.18039, -48.6602)
scale = Vector2(0.963046, 1.1483)

[node name="Sprite2D" parent="Control/VBoxContainer/BoxContainer/VictoryLabel/var_input/up_input" index="1"]
position = Vector2(10, -50)
rotation = -1.5708
texture = ExtResource("8_rrfhf")

[node name="CollisionShape2D" parent="Control/VBoxContainer/BoxContainer/VictoryLabel/var_input/down_input" index="0"]
position = Vector2(10, 76)
scale = Vector2(0.885535, 1.13635)

[node name="Sprite2D" parent="Control/VBoxContainer/BoxContainer/VictoryLabel/var_input/down_input" index="1"]
position = Vector2(10, 75)
rotation = 1.5708
texture = ExtResource("8_rrfhf")

[node name="gravity_flip_label" type="Label" parent="Control/VBoxContainer/BoxContainer"]
layout_mode = 2
text = "Flip Gravity Every
"

[node name="var_input" parent="Control/VBoxContainer/BoxContainer/gravity_flip_label" instance=ExtResource("7_43jr3")]
layout_mode = 2
offset_left = 166.0
offset_top = 3.0
offset_right = 312.0
offset_bottom = 29.0
selected_var = 1
num = 5

[node name="up_input" parent="Control/VBoxContainer/BoxContainer/gravity_flip_label/var_input" index="0"]
position = Vector2(1, -5)

[node name="CollisionShape2D" parent="Control/VBoxContainer/BoxContainer/gravity_flip_label/var_input/up_input" index="0"]
position = Vector2(10, -50)
scale = Vector2(0.941813, 1.09898)

[node name="Sprite2D" parent="Control/VBoxContainer/BoxContainer/gravity_flip_label/var_input/up_input" index="1"]
position = Vector2(10, -50)
rotation = -1.5708
texture = ExtResource("8_rrfhf")

[node name="CollisionShape2D" parent="Control/VBoxContainer/BoxContainer/gravity_flip_label/var_input/down_input" index="0"]
position = Vector2(10, 75)
scale = Vector2(0.949125, 1.06435)

[node name="Sprite2D" parent="Control/VBoxContainer/BoxContainer/gravity_flip_label/var_input/down_input" index="1"]
position = Vector2(10, 75)
rotation = 1.5708
texture = ExtResource("8_rrfhf")

[node name="BoxContainer2" type="BoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 165

[node name="player1color" parent="Control/VBoxContainer/BoxContainer2" instance=ExtResource("9_eh668")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="player2color" parent="Control/VBoxContainer/BoxContainer2" instance=ExtResource("9_eh668")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
selected_color = 1
player = 1

[node name="player3color" parent="Control/VBoxContainer/BoxContainer2" instance=ExtResource("9_eh668")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
selected_color = 2
player = 2

[node name="player4color" parent="Control/VBoxContainer/BoxContainer2" instance=ExtResource("9_eh668")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
selected_color = 3
player = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ch08o")
}

[node name="flip_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3tyy4")
volume_db = 4.0

[node name="message" parent="." instance=ExtResource("11_kgd12")]
offset_left = -1176.0
offset_top = -573.0
offset_right = 1172.0
offset_bottom = -24.0
theme_override_font_sizes/font_size = 150
metadata/_edit_lock_ = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_wjflt")
volume_db = -25.0

[node name="shake_shader" type="CanvasLayer" parent="."]
layer = 3

[node name="Sprite2D" type="Sprite2D" parent="shake_shader"]
self_modulate = Color(1, 1, 1, 0)
z_index = 4
material = SubResource("ShaderMaterial_j7yl8")
position = Vector2(-9, -16)
scale = Vector2(55.0547, 39.4141)
texture = ExtResource("14_kji5c")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
z_index = 5
material = SubResource("ShaderMaterial_adv75")
metadata/_edit_lock_ = true

[node name="asteroid_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="asteroids" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.117647)

[connection signal="pressed" from="Control/VBoxContainer/BoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="timeout" from="asteroid_timer" to="." method="_on_asteroid_timer_timeout"]

[editable path="game_stuff/arena/box4"]
[editable path="game_stuff/player1goal"]
[editable path="game_stuff/player1goal2"]
[editable path="Control/VBoxContainer/BoxContainer/start_button"]
[editable path="Control/VBoxContainer/BoxContainer/VictoryLabel/var_input"]
[editable path="Control/VBoxContainer/BoxContainer/gravity_flip_label/var_input"]
